# intersections

./: .gitignore  CMakeLists.txt  README.md  rectangles.json
include/: intersections.h  interval.h  rectangle.h
src/: fast.cpp  main.cpp  rapidjson_assert.h  simple.cpp  test.cpp  transitions.h
